<resources>
    <string name="app_name">Event Planner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter">FILTER</string>
    <string name="sort">SORT</string>
    <string name="events">EVENTS</string>
    <string name="products_amp_services"><![CDATA[PRODUCTS & SERVICES]]></string>
    <string name="event_filter">Event filter</string>
    <string name="event_type">Event type</string>
    <string name="privacy_type">Privacy type</string>
    <string name="number_of_participants">Number of participants</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="sort_category">Sort category</string>
    <string name="sort_type">Sort type</string>
    <string name="event_sort">Event sort</string>
    <string name="sans_serif">sans-serif</string>
    <string name="product_services_filter"><![CDATA[Products & services filter]]></string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="duration">Duration (min)</string>
    <string name="available">Available</string>
    <string name="products_services_sort"><![CDATA[Products & services sort]]></string>

    <string name="Open">Open</string>
    <string name="Close">Close</string>

    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="navbar_header_title">Event Planner 🗓</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>
    <string name="nav_subtitle_default">Please sign in to access full app functionality</string>
    <string name="email">Email</string>
    <string name="login_title">Log in to start using Event Planner</string>
    <string name="password">Password</string>
    <string name="event_organizer">Event organizer</string>
    <string name="role_choice_title">Choose your role</string>
    <string name="vendor">Product/Service Provider</string>
    <string name="go_to_login">Go to login</string>
    <string name="personal_information">Personal information</string>
    <string name="confirm_password">Confirm password</string>
    <string name="select_profile_picture">Select Profile Picture</string>
    <string name="profile_picture_preview">Profile picture preview</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="next">Next</string>
    <string name="register_organizer_title">Additional information</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone number</string>
    <string name="finish">Finish</string>
    <string name="register_vendor_title">Company information</string>
    <string name="description">Description</string>
    <string name="back">Back</string>
    <string name="registration_successful">Registration Successful!</string>
    <string name="registration_success_description">Your account has been created successfully. Please login to continue.</string>
    <string name="choose_profile_picture">Choose profile picture</string>
    <string name="owner_page">Owner page</string>

    <string name="creating_a_service">Creating a service</string>
    <string name="name">Name</string>
    <string name="choose_a_cancellation_deadline">Choose a cancellation deadline</string>
    <string name="choose_a_reservation_deadline">Choose a reservation deadline</string>
    <string name="discount">Discount</string>
    <string name="specific">Specific</string>
    <string name="descriptionService">Description</string>
    <string name="reservation_type">Reservation type</string>
    <string name="manual">manual</string>
    <string name="automatic">automatic</string>
    <string name="is_visible_to_organizers">Is visible to organizers</string>
    <string name="is_available_to_users">Is available to users</string>
    <string name="nextPage">Next</string>
    <string name="cancel">Cancel</string>
    <string name="edit_the_service">Edit the service</string>

    <string name="all">All</string>
    <string name="services">Services</string>
    <string name="products">Products</string>
    <string name="maximum_participants">Maximum participants</string>
    <string name="max_price">Max price</string>
    <string name="min_price">Min price</string>
    <string name="duration_min">Duration (min)</string>
    <string name="cancellation_deadline">Cancellation deadline</string>
    <string name="reservation_deadline">Reservation deadline</string>
    <string name="service_name">Service name</string>
    <string name="event_types">Event types</string>
    <string name="new_event_type">New Event Type</string>
    <string name="save">Save</string>
    <string name="add_event_type">Add Event Type</string>
    <string name="edit_event_type">Edit Event Type</string>
    <string name="event_type_active">Event type active?</string>
    <string name="offering_categories">Offering categories</string>
    <string name="my_products_services">My Products/Services</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="profile_picture">Profile picture</string>
    <string name="offering_category">Offering category</string>
    <string name="create_new_category">Create new category</string>
    <string name="create">Create</string>
    <string name="update_offering_category">Update offering category</string>
    <string name="edit">Edit</string>
    <string name="budget_plan">Budget plan</string>
    <string name="create_new_budget_item">Create new budget item</string>
    <string name="create_new_event">Create new event</string>
    <string name="my_events">My Events</string>
    <string name="create_event">Create Event</string>
    <string name="private_event">Private event</string>
    <string name="public_event">Public event</string>
    <string name="event_created_success">Event created successfully!</string>
    <string name="activity_add_success">Successfully added activity to agenda!</string>
    <string name="remove">Remove</string>
    <string name="add_activity">Add activity</string>
    <string name="agenda">Agenda</string>
    <string name="location">Location</string>
    <string name="activity_remove_success">Successfully removed activity!</string>
    <string name="add">Add</string>
    <string name="add_activity_title">Add Activity</string>
    <string name="agenda_finish_message">Successfully updated event agenda!</string>
    <string name="book_a_service">Book a service</string>
    <string name="purchase">purchase</string>
    <string name="book_service">Book service</string>
    <string name="location_icon">Location icon</string>
    <string name="event_picture">Event picture</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="organizer">Organizer</string>
    <string name="date_and_time">Date and time</string>
    <string name="max_participants">Maximum participants</string>
    <string name="actions">Actions</string>
    <string name="view_agenda">View Agenda</string>
    <string name="show_on_map">Show on a Map</string>
    <string name="invite_people">Invite people</string>
    <string name="buy_products_services">Buy Products/Services</string>
    <string name="edit_agenda">Edit Agenda</string>
    <string name="view_purchases">View Purchases</string>

    <string name="price_list">Price list</string>
    <string name="my_price_list">My price list</string>
    <string name="create_new_product">Create new product</string>
    <string name="product_image">Product image</string>
    <string name="edit_product">Edit product</string>
    <string name="delete_product">Delete product</string>
    <string name="star">star</string>
    <string name="my_products">My Products</string>
    <string name="my_services">My Services</string>
    <string name="filter_products">Filter products</string>
    <string name="search_products">Search products</string>
    <string name="price_range">Price Range</string>
    <string name="apply">Apply</string>
    <string name="clear_filters">Clear filters</string>
    <string name="discount_percentage">Discount (%)</string>
    <string name="visible_to_organizers">Visible to organizers</string>
    <string name="available_for_purchase">Available for purchase</string>
    <string name="select_images">Select Images</string>
    <string name="submit">Submit</string>

    <string name="report_user">Report user</string>
    <string name="report_message">Report message</string>
    <string name="send_report">Send report</string>
    <string name="notification_status">notification status</string>
    <string name="suspend_user">suspend user</string>
    <string name="reports">Reports</string>
    <string name="suspended_users">Suspended users</string>
    <string name="suspensions">Suspensions</string>
    <string name="you_are_suspended">You are suspended!</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="added_to_favorites">Added to favorites!</string>
    <string name="removed_from_favorites">Removed from favorites!</string>
    <string name="download_pdf_report">Download PDF Report</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="change_password">Change Password</string>
    <string name="favorite_products_services">Favorite Products/Services</string>
    <string name="calendar">Calendar</string>
    <string name="favorite_events">Favorite Events</string>
    <string name="company_info">Company Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_address">%1$s, %2$s, %3$s</string>
    <string name="company_name">Company name</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="account_deactivated_message">Your account has been permanently deactivated.</string>
    <string name="service_reservations">Service Reservations</string>
    <string name="attending_events">Attending Events</string>
    <string name="service_image">Service image</string>
    <string name="current_user_was_blocked">Current user was blocked.</string>
    <string name="chat">Chat</string>
    <string name="reviews">Reviews</string>
    <string name="comment">Comment:</string>
    <string name="rating">Rating:</string>
    <string name="date">Date:</string>
    <string name="public_event_label">This event is public.</string>
    <string name="private_event_label">This event is private.</string>
    <string name="join_event">Join event</string>
    <string name="chat_with_organizer">Chat with organizer</string>
    <string name="view_stats">View Stats</string>
    <string name="attendees">Attendees</string>
    <string name="rating_distribution">Rating Distribution</string>
    <string name="right_chevron">right chevron</string>
    <string name="upgrade_account">Upgrade account</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="budget_finish_message">Successfully saved budget plan!</string>
    <string name="report_sent_successfully">Report sent successfully!</string>
    >>>>>>> develop
</resources>