<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:id="@id/profileFragment"
        android:icon="@drawable/ic_person"
        android:title="@string/profile" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notifications"
        android:title="@string/notifications" />
    <item
        android:id="@id/myProductsFragment"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/my_products_services" />
    <item
        android:id="@+id/priceListPage"
        android:icon="@drawable/money"
        android:title="@string/my_price_list"/>
    <item
        android:id="@id/ownerHomePage"
        android:icon="@drawable/ic_shopping_basket"
        android:title="@string/my_services" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/chat"
        android:title="@string/chat"/>

</menu>