<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@string/products_services_sort"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/primary"
            android:layout_marginBottom="8dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/primary"
            android:layout_marginVertical="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="2dp"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_category"
                android:textSize="16sp"
                android:layout_marginBottom="4dp"
                android:textColor="@color/primary"/>

            <Spinner
                android:id="@+id/offering_sort_category"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sort_type"
                android:textSize="16sp"
                android:textColor="@color/primary"
                android:layout_marginBottom="4dp"/>

            <Spinner
                android:id="@+id/offering_sort_type"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="12dp"
                android:textColor="@color/primary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/offering_sort_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="200dp"
                android:backgroundTint="@color/primary"
                android:textColor="@color/white"
                android:text="@string/sort" />
        </LinearLayout>
    </LinearLayout>

</layout>
